--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -1,9 +1,10 @@
 [package]
-name = "core"
+name = "luminy_core"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+configparser = "1.0"
 blake3 = "1.4"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
